--- a/twistranet/themes/twistheme/static/css/fileuploader.css
+++ b/twistranet/themes/twistheme/static/css/fileuploader.css
@@ -15,40 +15,57 @@
     -webkit-border-radius:5px;
     border-radius:5px;
     cursor: pointer !important;
+    position: relative;
+    z-index: 20;
+    top: 17px;
+    left: 10px;
 }
 
 .qq-upload-button input,
 .qq-upload-button input:hover {cursor: pointer !important;}
 
 .qq-upload-drop-area {
-    position:absolute; top:0; left:0; width:100%; height: 48px; z-index:2;
+    position:absolute; top:0; left:0; width:100%; height: 59px; z-index:10;
     background: #F5F5F5; text-align:center; border: 1px dotted black;
+    opacity: 0.3;
+    max-width: 541px;
 }
+
 .qq-upload-drop-area span {
-    display:block; position:absolute; top: 35%; width:100%; font-size:12px;
+    display:block; position:absolute; top: 20px; right: 10%; font-size:12px;
 }
-.qq-upload-drop-area-active {}
+.qq-upload-drop-area-active {
+    opacity: 1;
+    z-index:30
+}
 
 .qq-upload-list {
     display: block;
-    float: left;
-    padding:0;
+    padding:5px;
     margin: 0;
-    list-style: none outside none}
+    list-style: none outside none;
+    width: 200px;
+    background: white;
+    position: absolute;
+    left: 155px;
+    top: 10px;
+    z-index: 60;
+    border: 1px solid #ccc;
+    display: none;
+    }
 
 .qq-upload-list li {
-    display: block;
+    display: block !important;
     float: left;
     font-size: 11px;
-    list-style: none outside none;
-    margin: 0;
+    list-style: none outside none !important;
+    margin: 2px 0 0 !important;
     overflow: hidden;
-    padding: 0 2px 0 5px;
-    width: 150px;
+    width: 200px;
 }
 
 .qq-upload-file {
-    width: 100px;
+    width: 150px;
     overflow: hidden;
 }
 
@@ -87,7 +104,7 @@
     border-right: 1px solid #C5C5C5;
     border-bottom: 1px solid #C5C5C5;
     margin-top: 6px;
-    min-width: 60%;
+    min-width: 70%;
     height: 3px;
     float: left;
 }
