--- a/twistranet/themes/twistheme/static/css/tn_resource_widget.css
+++ b/twistranet/themes/twistheme/static/css/tn_resource_widget.css
@@ -92,7 +92,7 @@
 }
 
 .tnQuickUpload {
-    height: 49px;
+    height: 90px;
     overflow: visible;
 }
 
@@ -104,12 +104,20 @@
     min-height: 49px;
 }
 
+.inline-form .resource-widget .tnQuickUpload {
+    height: 59px;
+}
+
 .inline-form .resource-widget .renderer-preview {
     display: block;
     width: auto;
     min-width: 50px;
     margin: 0 10px 0 0 !important;
     float: left;
+}
+
+.inline-form #resources-renderer, x:-moz-any-link, x:default {
+    margin-top: 10px !important;
 }
 
 
