--- a/twistranet/themes/twistheme/static/css/ie.css
+++ b/twistranet/themes/twistheme/static/css/ie.css
@@ -23,3 +23,6 @@ IE7 > IE9 fixes
     width: 420px;
 }
 
+.qq-upload-button {left: 0 !important; top: 0 !important;}
+
+.qq-upload-spinner {position: relative; top: -3px;}
