minor css improvements

--- a/twistranet/themes/twistheme/static/css/ie.css
+++ b/twistranet/themes/twistheme/static/css/ie.css
@@ -25,4 +25,4 @@ IE7 > IE9 fixes
 
 .qq-upload-button {left: 0 !important; top: 0 !important;}
 
-.qq-upload-spinner {position: relative; top: -3px;}
+.qq-upload-spinner {top: -3px;}
