--- a/twistranet/themes/twistheme/static/css/fileuploader.css
+++ b/twistranet/themes/twistheme/static/css/fileuploader.css
@@ -27,7 +27,7 @@
 .qq-upload-drop-area {
     position:absolute; top:0; left:0; width:100%; height: 59px; z-index:10;
     background: #F5F5F5; text-align:center; border: 1px dotted black;
-    opacity: 0.3;
+    opacity: 0.5;
     max-width: 541px;
 }
 
@@ -71,7 +71,7 @@
 }
 
 
-.qq-upload-spinner {display:none; background: transparent url("../images/icons/loading.gif") top left no-repeat; width:15px; height:15px; vertical-align:text-bottom; margin-left: 10px}
+.qq-upload-spinner {display:none; background: transparent url("../images/icons/loading.gif") top left no-repeat; width:15px; height:15px; vertical-align:text-bottom; margin-left: 10px; position: relative; top: -2px; }
 .qq-upload-size,.qq-upload-cancel {font-size:11px;}
 
 .qq-upload-list .qq-upload-cancel,
@@ -125,7 +125,7 @@
 
 .qq-upload-infos {
    width: 170px;
-   height: 15px;
+   height: 16px;
    overflow: hidden;
 }
 
