--- a/twistranet/twistapp/templates/content/summary.comments.part.html
+++ b/twistranet/twistapp/templates/content/summary.comments.part.html
@@ -1,3 +1,4 @@
+{% comment %} XXX TODO JMG : never use {{ content.id }} ad css id >> need also some refactoring in comment.js  {% endcomment %}
 {% load i18n %}
 {% with content.comments.count as comment_count %}
 <li
