--- a/twistranet/themes/twistheme/templates/base.html
+++ b/twistranet/themes/twistheme/templates/base.html
@@ -33,7 +33,8 @@
     <script type="text/javascript" src="{% url twistranet_home %}static/js/jquery.dd.js" charset="utf-8"></script>      
     <script type="text/javascript" src="{% url twistranet_home %}static/js/fileuploader.js" charset="utf-8"></script>  
     <script type="text/javascript" src="{% url twistranet_home %}static/js/tn_quickupload_helpers.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{% url twistranet_home %}static/js/comments.js" charset="utf-8"></script>      
+    <script type="text/javascript" src="{% url twistranet_home %}static/js/comments.js" charset="utf-8"></script>
+    <script type="text/javascript" src="{% url twistranet_home %}static/js/sharing.js" charset="utf-8"></script>
     <script type="text/javascript" src="{% url twistranet_home %}static/js/tn.js" charset="utf-8"></script>
     {% block local_js %}{% endblock %}
     {% if form %}{{ form.media }}{% endif %}
