--- a/twistranet/sharing/templates/sharing/summary.part.html
+++ b/twistranet/sharing/templates/sharing/summary.part.html
@@ -2,28 +2,43 @@
 {% load i18n %}
 
 {% with content.likes as likes %}
-    {% if not likes.i_like %}
-        <li class="i_like"
-            id="toggle_like_{{ content.id }}">
-            <a class="toggle_like"
-               href="#">{% blocktrans %}I like{% endblocktrans %}</a>
-        </li>
-    {% else %}
-        <li class="i_unlike"
-            id="toggle_like_{{ content.id }}">
-            <a class="toggle_like"
-               href="#">{% blocktrans %}I don't like{% endblocktrans %}</a>
-        </li>
-    {% endif %}
-
     {% with likes.n_likes as n_likes %}
         {% if n_likes %}
-            <li class="n_likes">
-                {% blocktrans %}{{ n_likes }} like this{% endblocktrans %}
+                <li class="f_likes">
+                    {% for account in likes.featured %}
+                      <span>toto</span>
+                    {% endfor %}
+                </li>
+        {% endif %}
+        {% if not likes.i_like %}
+            {% if n_likes %}
+                <li class="n_likes">
+                    {% blocktrans %}{{ n_likes }} people like this{% endblocktrans %}
+                </li>
+            {% endif %}
+            <li class="i_like"
+                id="toggle_like_{{ content.id }}">
+                <a class="toggle_like"
+                   href="#">{% blocktrans %}I like{% endblocktrans %}</a>
+            </li>
+        {% else %}
+            {% if op_likes %}
+                <li class="n_likes">
+                    {% blocktrans %}You and {{ op_likes }} people like this{% endblocktrans %}
+                </li>
+            {% else %}
+                <li class="n_likes">
+                    {% blocktrans %}You like this{% endblocktrans %}
+                </li>
+            {% endif %}
+            <li class="i_unlike"
+                id="toggle_like_{{ content.id }}">
+                <a class="toggle_like"
+                   href="#">{% blocktrans %}I don't like{% endblocktrans %}</a>
             </li>
         {% endif %}
-    {% endwith %}
 
+    {% endwith %}
 {% endwith %}
 
 
