--- a/twistranet/twistapp/templates/content/summary.part.html
+++ b/twistranet/twistapp/templates/content/summary.part.html
@@ -45,7 +45,6 @@
                 <li class="date">{{ content.created_at|timesince }}</li>
                 {% if content.language %}<li class="lang">{{ content.language }}</li>{%endif%}
                 <li class="target">{{ content.permissions }}</li>
-                {% include 'sharing/summary.part.html' %}
                 {% if content.can_edit %}
                     <li class="edit">
                         <a href="{% url edit_content content.id %}">Edit</a>
@@ -54,6 +53,9 @@
                 {% include 'content/summary.comments.part.html' %}
 
                 <!-- {{ content.id }} -->
+            </ul>
+            <ul class="sharing-info">
+            {% include 'sharing/summary.part.html' %}
             </ul>
         </div>
         <div id="view_comments{{ content.id }}" class="comments-container">
