--- a/twistranet/twistapp/templates/wall.html
+++ b/twistranet/twistapp/templates/wall.html
@@ -24,12 +24,7 @@
         {% include "content/content_forms.part.html" %}
     {% endif %}
 
-    {% if latest_content_list %}
-        {% for content in latest_content_list %}
-            {%include content.summary_view %}
-        {% endfor %}
-    {% else %}
-        <p>{% blocktrans %}No content.{% endblocktrans %}</p>
-    {% endif %}
+    {% include "wall.content.part.html" %}
+
 {% endblock %}
 
