--- a/twistranet/themes/twistheme/static/css/style.css
+++ b/twistranet/themes/twistheme/static/css/style.css
@@ -48,14 +48,14 @@
 ***************************************************************************** */
 
 .icon-delete {
-  background-image: url(../images/icons/icons-normal.png);
+  background-image: url(../images/icons/sprite.png);
   background-repeat: no-repeat;
   background-position: 0 -96px;
-  display: block;
   height: 10px;
 }
 .icon-delete:hover {
-  background-image: url(../images/icons/icons-hover.png);
+  background-position: 0 -112px;
+  text-decoration: none !important;
 }
 
 /* image tags can be displayed also outside thumbnails parts
