--- a/twistranet/twistapp/templates/actions/content_summary.part.html
+++ b/twistranet/twistapp/templates/actions/content_summary.part.html
@@ -1,5 +1,10 @@
 {% load i18n %}
 <ul>
+    {% if content.can_edit %}
+        <li class="edit">
+            <a href="{% url edit_content content.id %}">Edit</a>
+        </li>
+    {% endif %}
     {% if content.can_delete %}
         <li>
             <a href="{% url delete_content content.id %}" 
