--- a/twistranet/themes/twistheme/static/css/content.css
+++ b/twistranet/themes/twistheme/static/css/content.css
@@ -181,11 +181,7 @@
 .public-actions {
    clear:right;
    float: right;
-   margin: 7px 0 0;
-}
-
-.post-File .public-actions {
-   margin-top: 0;
+   margin: 0;
 }
 
 .public-actions ul {
