minor fixes for f_likes container (likes.featured)

--- a/twistranet/sharing/templates/sharing/summary.part.html
+++ b/twistranet/sharing/templates/sharing/summary.part.html
@@ -7,7 +7,7 @@
             <li class="f_likes">
                 {% autoescape off %}
                   {% for featured in likes.featured %}
-                     {{ featured.html_link }}
+                     {{ featured.html_link }}{% if not forloop.last %},&nbsp;{% endif %}
                   {% endfor %}
                 {% endautoescape %}
             </li>
