removing all li nodes (or using display: none) inside an ul block give strange results in chrome, solution : we just hide the li nodes if necessary (visibility : hidden)

--- a/twistranet/sharing/templates/sharing/summary.part.html
+++ b/twistranet/sharing/templates/sharing/summary.part.html
@@ -23,7 +23,7 @@
                 id="toggle_like_{{ content.id }}">
                 <a class="toggle_like"
                    title="{% blocktrans %}I like{% endblocktrans %}"
-                   href="#">&nbsp;</a>
+                   href="#"></a>
             </li>
         {% else %}
             <li class="i_unlike"
