--- a/twistranet/twistapp/templates/actions/content_summary.part.html
+++ b/twistranet/twistapp/templates/actions/content_summary.part.html
@@ -13,7 +13,9 @@
               <span></span>
               {# <!-- because the link has class 'confirmbefore' we can use a specific confirm message --> #}
               {% with content.title as title%}
-                    <span class="confirm-message">{% blocktrans %}Do you really want to delete '{{ title }}'?{% endblocktrans %}</span>
+                    {% if title %}
+                      <span class="confirm-message">{% blocktrans %}Do you really want to delete '{{ title }}'?{% endblocktrans %}</span>
+                    {% endif %}
               {% endwith %}
             </a>
         </li>
