--- a/twistranet/themes/twistheme/static/css/content.css
+++ b/twistranet/themes/twistheme/static/css/content.css
@@ -181,7 +181,11 @@
 .public-actions {
    clear:right;
    float: right;
-   margin: 0;
+   margin: 7px 0 0;
+}
+
+.post-File .public-actions {
+   margin-top: 0;
 }
 
 .public-actions ul {
