wiki filter improved (for unsafe content : remove tags, urlize the links, linebreaks2br, ...) fix title_or_description method remove the safe filter in templates everywhere except for html content (document.text)

--- a/twistranet/twistapp/templates/content/summary.part.html
+++ b/twistranet/twistapp/templates/content/summary.part.html
@@ -31,11 +31,11 @@
                 {% else %}
                     {{ content.title_or_description|wiki }}
                 {% endif %}
+                {% if content.detail_link %}
+                        {{ content.description|wiki }}
+                    </div>
+                {% endif %}
             </span>
-            {% if content.detail_link %}
-                    {{ content.description|safe|wiki }}
-                </div>
-            {% endif %}
         </div>
         <div class="public-actions">
             <ul class="comment-actions">
