--- a/twistranet/twistapp/templates/content/view.html
+++ b/twistranet/twistapp/templates/content/view.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content-summary">
-        {{ content.description|safe|fullwiki }}
+        {{ content.description|fullwiki }}
     </div>
     
     <div class="content-text">
