--- a/twistranet/twistapp/templates/content/summary.file.html
+++ b/twistranet/twistapp/templates/content/summary.file.html
@@ -34,7 +34,7 @@
                                 {% endwith %}
                             </div>
                             <div class="content-description">
-                            {{ content.description|safe|wiki }}
+                            {{ content.description|wiki }}
                             </div>
                             <div class="clear"></div>
                         </div>          
